autobuild: Replace samba-buildpy2-only with samba-nopython-py2
For Samba 4.11, the minimum python2 functionality we will support (for
now, at least - we may change our minds) is for the --disable-python
target, i.e. if you're excluding all the python functionality from
samba, then WAF should still support being built with python2.

The use case here is old unix platforms that want to use smbd, but don't
have python3 support.

Signed-off-by: Tim Beale <timbeale@catalyst.net.nz>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,9 @@ samba-none-env:
 samba-nopython:
   extends: .shared_template
 
+samba-nopython-py2:
+  extends: .shared_template
+
 samba-systemkrb5:
   extends: .shared_template
 
@@ -90,9 +93,6 @@ ctdb:
   extends: .shared_template
 
 samba-ctdb:
-  extends: .shared_template
-
-samba-buildpy2-only:
   extends: .shared_template
 
 samba-ad-dc-ntvfs:
