--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,3 +99,37 @@ samba-ad-dc-ntvfs:
   extends: .shared_template
   # this one takes about 100 mins to finish
 
+
+.private_template:
+  extends: .shared_template
+  tags:
+    - docker
+    - private
+  before_script:
+    - uname -a
+    - lsb_release -a
+    - mount
+    - df -h
+    - free -h
+  only:
+    variables:
+      # These jobs are only run if the gitlab repo has private runners available.
+      # To enable private jobs, you must add the following var and value to
+      # your gitlab repo by navigating to:
+      # settings -> CI/CD -> Environment variables
+      - $SUPPORT_PRIVATE_TEST == "yes"
+
+samba:
+  extends: .private_template
+  # this one takes about 4 hours to finish
+
+samba-fileserver:
+  extends: .private_template
+  # this one takes about 1 hours to finish
+
+samba-ad-dc:
+  extends: .private_template
+  # this one takes about 1 hours to finish
+
+samba-nt4:
+  extends: .private_template
