--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,9 @@ others:
     - script/autobuild.py tdb              --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
     - script/autobuild.py tevent           --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
+samba:
+  extends: .shared_template
+
 samba-none-env:
   extends: .shared_template
   # this one takes about 1 hours to finish
@@ -132,10 +135,6 @@ samba-ad-dc-ntvfs:
       # your gitlab repo by navigating to:
       # settings -> CI/CD -> Environment variables
       - $SUPPORT_PRIVATE_TEST == "yes"
-
-samba:
-  extends: .private_template
-  # this one takes about 4 hours to finish
 
 samba-fileserver:
   extends: .private_template
