autobuild: add samba-ad-member task
Signed-off-by: Stefan Metzmacher <metze@samba.org>
Reviewed-by: Andreas Schneider <asn@samba.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,9 @@ samba-xc:
 samba-o3:
   extends: .shared_template
 
+samba-ad-member:
+  extends: .shared_template
+
 samba-ad-dc-2:
   extends: .shared_template
   # this one takes about 1 hours to finish
