.gitlab-ci.yml: show the system state also as after_script
Signed-off-by: Stefan Metzmacher <metze@samba.org>
Reviewed-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Ralph Boehme <slow@samba.org>

Autobuild-User(master): Stefan Metzmacher <metze@samba.org>
Autobuild-Date(master): Fri Apr 12 20:42:27 UTC 2019 on sn-devel-144

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,11 @@ variables:
     - df -h
     - cat /proc/swaps
     - free -h
+  after_script:
+    - mount
+    - df -h
+    - cat /proc/swaps
+    - free -h
   artifacts:
     expire_in: 1 week
     when: on_failure
