.gitlab-ci.yml: print out /proc/swaps
Signed-off-by: Stefan Metzmacher <metze@samba.org>
Reviewed-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Ralph Boehme <slow@samba.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ variables:
     - cat /etc/os-release
     - mount
     - df -h
+    - cat /proc/swaps
     - free -h
   artifacts:
     expire_in: 1 week
