autobuild: Add -py2 tests for new split backup/restore testenvs
This ensures Python2 coverage for this code while it remains supported.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=13780

Signed-off-by: Andrew Bartlett <abartlet@samba.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,11 @@ build_samba_ad_dc_backup:
   script:
     - script/autobuild.py samba-ad-dc-backup    --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
 
+build_samba_ad_dc_backup_py2:
+  <<: *shared_template
+  script:
+    - script/autobuild.py samba-ad-dc-backup-py2    --verbose --nocleanup --keeplogs --tail --testbase /tmp/samba-testbase
+
 build_samba_ad_dc_2_py2:
   <<: *shared_template
   script:
