.gitlab-ci.yml: print out /etc/os-release
Signed-off-by: Stefan Metzmacher <metze@samba.org>
Reviewed-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Ralph Boehme <slow@samba.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ variables:
   before_script:
     - uname -a
     - lsb_release -a
+    - cat /etc/os-release
     - mount
     - df -h
     - free -h
