selftest: split schemaupgrade testenv out
Schemaupgrade tests are particularly resource intensive and are causing
runners to hit their memory and CPU limits, so we need to split them
out.

Signed-off-by: Aaron Haslett <aaronhaslett@catalyst.net.nz>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>
Reviewed-by: Garming Sam <garming@catalyst.net.nz>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,9 @@ samba-ad-dc-5:
 samba-ad-dc-6:
   extends: .shared_template
 
+samba-schemaupgrade:
+  extends: .shared_template
+
 samba-ad-dc-backup:
   extends: .shared_template
 
