.gitlab-ci.yml: require samba-ci-private tag for our private runners
This makes it more clear that we need our own private runners.

Signed-off-by: Stefan Metzmacher <metze@samba.org>
Reviewed-by: Ralph Boehme <slow@samba.org>

Autobuild-User(master): Ralph Böhme <slow@samba.org>
Autobuild-Date(master): Tue Apr 16 17:45:35 UTC 2019 on sn-devel-144

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,6 +120,7 @@ samba-ad-dc-ntvfs:
   tags:
     - docker
     - private
+    - samba-ci-private
   only:
     variables:
       # These jobs are only run if the gitlab repo has private runners available.
