.gitlab-ci.yml: run samba-schemaupgrade on the private runner
The related jobs often fail with timeouts
because the shared runners (4GB RAM + 2GB SWAP)
will use ~450MB of the swapfile.

The private runners use 8GB RAM without any swap.

Signed-off-by: Stefan Metzmacher <metze@samba.org>
Reviewed-by: Ralph Boehme <slow@samba.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,9 +98,6 @@ samba-ad-dc-5:
 samba-ad-dc-6:
   extends: .shared_template
 
-samba-schemaupgrade:
-  extends: .shared_template
-
 samba-ad-dc-backup:
   extends: .shared_template
 
@@ -142,4 +139,7 @@ samba-ad-dc-1:
   extends: .private_template
 
 samba-nt4:
+  extends: .private_template
+
+samba-schemaupgrade:
   extends: .private_template
