gitlab-ci: Enable fedora29 and update generated dists
Signed-off-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Ralph Boehme <slow@samba.org>

Autobuild-User(master): Andreas Schneider <asn@cryptomilk.org>
Autobuild-Date(master): Thu Apr 25 11:46:23 UTC 2019 on sn-devel-184

--- a/bootstrap/.gitlab-ci.yml
+++ b/bootstrap/.gitlab-ci.yml
@@ -101,7 +101,7 @@ debian7:
   extends: .build_image_template_force_broken
 
 fedora29:
-  extends: .build_image_template_force_broken
+  extends: .build_image_template
 
 fedora28:
   extends: .build_image_template_force_broken
