--- a/bootstrap/generated-dists/ubuntu1804/packages.yml
+++ b/bootstrap/generated-dists/ubuntu1804/packages.yml
@@ -17,6 +17,7 @@ packages:
   - gcc
   - gdb
   - git
+  - glusterfs-common
   - gzip
   - hostname
   - htop
@@ -31,6 +32,7 @@ packages:
   - libblkid-dev
   - libbsd-dev
   - libcap-dev
+  - libcephfs-dev
   - libcups2-dev
   - libdbus-1-dev
   - libglib2.0-dev
@@ -89,5 +91,6 @@ packages:
   - tar
   - tree
   - uuid-dev
+  - xfslibs-dev
   - xsltproc
   - zlib1g-dev
