--- a/bootstrap/generated-dists/debian9/packages.yml
+++ b/bootstrap/generated-dists/debian9/packages.yml
@@ -17,6 +17,7 @@ packages:
   - gcc
   - gdb
   - git
+  - glusterfs-common
   - gzip
   - hostname
   - htop
@@ -30,6 +31,7 @@ packages:
   - libblkid-dev
   - libbsd-dev
   - libcap-dev
+  - libcephfs-dev
   - libcups2-dev
   - libdbus-1-dev
   - libglib2.0-dev
@@ -88,5 +90,6 @@ packages:
   - tar
   - tree
   - uuid-dev
+  - xfslibs-dev
   - xsltproc
   - zlib1g-dev
