--- a/bootstrap/generated-dists/opensuse150/packages.yml
+++ b/bootstrap/generated-dists/opensuse150/packages.yml
@@ -19,6 +19,7 @@ packages:
   - git
   - glib2-devel
   - glibc-locale
+  - glusterfs-devel
   - gnutls-devel
   - gpgme-devel
   - gzip
@@ -34,6 +35,7 @@ packages:
   - libblkid-devel
   - libbsd-devel
   - libcap-devel
+  - libcephfs-devel
   - libicu-devel
   - libjansson-devel
   - libnettle-devel
@@ -77,6 +79,7 @@ packages:
   - readline-devel
   - rng-tools
   - rpcgen
+  - rpcsvc-proto-devel
   - rsync
   - sed
   - sudo
@@ -84,5 +87,6 @@ packages:
   - tar
   - tree
   - which
+  - xfsprogs-devel
   - yum-utils
   - zlib-devel
