gitlab-ci: Remove Ubuntu 14.04
Ubuntu 14.04 a compiler which complains about valid C99 code and also it
doesn't offer GnuTLS >= 3.2 which we require to move to GnuTLS.

Signed-off-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Ralph Boehme <slow@samba.org>

Autobuild-User(master): Andreas Schneider <asn@cryptomilk.org>
Autobuild-Date(master): Thu Apr 25 16:52:57 UTC 2019 on sn-devel-184

--- a/bootstrap/.gitlab-ci.yml
+++ b/bootstrap/.gitlab-ci.yml
@@ -89,7 +89,7 @@ ubuntu1604:
   extends: .build_image_template
 
 ubuntu1404:
-  extends: .build_image_template
+  extends: .build_image_template_force_broken
 
 debian9:
   extends: .build_image_template
