gitlab-ci: Enable building on CentOS7
Signed-off-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>

Autobuild-User(master): Andrew Bartlett <abartlet@samba.org>
Autobuild-Date(master): Tue May  7 01:45:37 UTC 2019 on sn-devel-184

--- a/bootstrap/.gitlab-ci.yml
+++ b/bootstrap/.gitlab-ci.yml
@@ -107,7 +107,10 @@ fedora28:
   extends: .build_image_template_force_broken
 
 centos7:
-  extends: .build_image_template_force_broken
+  extends: .build_image_template
+  variables:
+    # Shallow copies are not supported by git on CentOS7
+    GIT_DEPTH: ""
 
 centos6:
   extends: .build_image_template_force_broken
