--- a/bootstrap/generated-dists/centos6/packages.yml
+++ b/bootstrap/generated-dists/centos6/packages.yml
@@ -75,7 +75,8 @@ packages:
   - python3-crypto
   - python3-dns
   - python3-markdown
-  - python34-devel
+  - python36
+  - python36-devel
   - quota-devel
   - readline-devel
   - redhat-lsb
