--- a/bootstrap/generated-dists/fedora28/packages.yml
+++ b/bootstrap/generated-dists/fedora28/packages.yml
@@ -76,6 +76,7 @@ packages:
   - python-dns
   - python-markdown
   - python2-gpg
+  - python3
   - python3-crypto
   - python3-devel
   - python3-dns
