--- a/bootstrap/generated-dists/opensuse150/packages.yml
+++ b/bootstrap/generated-dists/opensuse150/packages.yml
@@ -72,6 +72,7 @@ packages:
   - python2-dnspython
   - python2-gpg
   - python2-semanage
+  - python3
   - python3-Markdown
   - python3-devel
   - python3-dnspython
