--- a/bootstrap/generated-dists/ubuntu1404/packages.yml
+++ b/bootstrap/generated-dists/ubuntu1404/packages.yml
@@ -74,6 +74,7 @@ packages:
   - python-iso8601
   - python-markdown
   - python-pexpect
+  - python3
   - python3-crypto
   - python3-dbg
   - python3-dev
