bootstrap: add lcov to generate code coverage report
Signed-off-by: Joe Guo <joeg@catalyst.net.nz>
Reviewed-by: Douglas Bagnall <douglas.bagnall@catalyst.net.nz>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>

--- a/bootstrap/generated-dists/fedora28/packages.yml
+++ b/bootstrap/generated-dists/fedora28/packages.yml
@@ -32,6 +32,7 @@ packages:
   - keyutils-libs-devel
   - krb5-devel
   - krb5-server
+  - lcov
   - libacl-devel
   - libaio-devel
   - libarchive-devel
