--- a/bootstrap/generated-dists/fedora29/packages.yml
+++ b/bootstrap/generated-dists/fedora29/packages.yml
@@ -32,6 +32,7 @@ packages:
   - keyutils-libs-devel
   - krb5-devel
   - krb5-server
+  - lcov
   - libacl-devel
   - libaio-devel
   - libarchive-devel
