gitlab-ci: Install libtasn1-tools on Fedora based distributions
Signed-off-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>

--- a/bootstrap/generated-dists/fedora28/packages.yml
+++ b/bootstrap/generated-dists/fedora28/packages.yml
@@ -46,6 +46,7 @@ packages:
   - libpcap-devel
   - libsemanage-python
   - libtasn1-devel
+  - libtasn1-tools
   - libtirpc-devel
   - libunwind-devel
   - libuuid-devel
