--- a/bootstrap/generated-dists/centos6/packages.yml
+++ b/bootstrap/generated-dists/centos6/packages.yml
@@ -42,6 +42,7 @@ packages:
   - libpcap-devel
   - libsemanage-python
   - libtasn1-devel
+  - libtasn1-tools
   - libtirpc-devel
   - libunwind-devel
   - libuuid-devel
