--- a/bootstrap/generated-dists/fedora29/packages.yml
+++ b/bootstrap/generated-dists/fedora29/packages.yml
@@ -46,6 +46,7 @@ packages:
   - libpcap-devel
   - libsemanage-python
   - libtasn1-devel
+  - libtasn1-tools
   - libtirpc-devel
   - libunwind-devel
   - libuuid-devel
