gitlab-ci: Add Fedora 30
Fedora 30 ships with gcc9.

Signed-off-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>

--- a/bootstrap/.gitlab-ci.yml
+++ b/bootstrap/.gitlab-ci.yml
@@ -100,6 +100,9 @@ debian8:
 debian7:
   extends: .build_image_template_force_broken
 
+fedora30:
+  extends: .build_image_template
+
 fedora29:
   extends: .build_image_template
 
